--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -10,6 +10,12 @@
   --grey: #6E7C8E;
   --light-grey: #D9D9D9;
 
+  --red: rgb(238,57,52);
+  --orange: rgb(255,180,0);
+  --green: rgb(68,202,90);
+  --blue: rgb(48,134,235);
+  --purple: rgb(204, 0, 255);
+
   --header-bg: var(--white-pure);
   --navbar-button: var(--black);
   --navbar-button-hover: var(--blue);
@@ -94,6 +100,7 @@ navbar .divider {
   justify-content: center;
   align-items: center;
   border-radius: 12px;
+  border: none;
   color: var(--white);
   padding: 0px 16px;
   transition: color 100ms;
@@ -204,13 +211,13 @@ navbar .divider {
   font-family: 'Montserrat';
 }
 
-button.loading::after {
+.loading::after {
   content: "";
   position: absolute;
   width: 16px;
   height: 16px;
   top: 0;
-  left: 0;
+  left: 0;  
   right: 0;
   bottom: 0;
   margin: auto;
@@ -219,14 +226,15 @@ button.loading::after {
   border-radius: 50%;
   animation: button-loading-spinner 1s ease infinite;
 }
+
 @keyframes button-loading-spinner {
-  from { transform: rotate(0turn); }
-  to { transform: rotate(1turn); }
+  0% { transform: rotate(0turn); }
+  100% { transform: rotate(1turn); }
 }
-button.loading-complete {
+.loading-complete {
   background: var(--green);
 }
-button.loading-complete:after {
+.loading-complete:after {
   content: '<i class="fa fa-check"></i>';
 }
 
