--- a/css/home_page.css
+++ b/css/home_page.css
@@ -25,11 +25,37 @@ body {
   transition: opacity 250ms linear;
   cursor: pointer;
   z-index: 99;
+  text-align: center;
+}
+#idle_overlay * {
+  color: black;
+}
+#idle_overlay container {
+  height: auto;
+  margin: auto;
+  width: 100%;
 }
 #idle_overlay h1 {
-  font-weight: bold;
+  font-family: 'ubuntu', "Montserrat";
+  font-weight: 550;
+  font-size: 200px;
+  line-height: 200px;
+  margin-bottom: 20px;
+}
+#idle_overlay h3 {
+  font-size: 74px;
+  font-weight: 500;
+  line-height: 74px;
+  margin-bottom: 20px;
+}
+#idle_overlay h4 {
+  font-weight: 550;
+  font-size: 60px;
+  line-height: 60px;
+  margin: auto auto 120px auto;
   animation: idle_pulse 5s infinite;
 }
+
 @keyframes idle_pulse {
   0% {
 		transform: scale(0.95);
