--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -566,6 +566,7 @@ table {
 }
 table td, table th {
   padding: 8px;
+  vertical-align: top;
 }
 table th {
   padding-top: 12px;
@@ -1255,6 +1256,48 @@ spacer {
   margin: auto 0px 0px auto;
   text-align: right;
 }
+
+#recent_activity_table td:nth-of-type(1) {
+  width: 74px;
+}
+#recent_activity_table td:nth-of-type(2) {
+  width: 54px;
+}
+#recent_activity_table td:nth-of-type(3) {
+  width:134px;
+}
+#recent_activity_table td:nth-of-type(7) {
+  width: 100px;
+}
+
+#user_status_table td:nth-of-type(1) {
+  width: 74px;
+}
+#user_status_table td:nth-of-type(2) {
+  width: 134px;
+}
+
+#restricted_users_table td:nth-of-type(1) {
+  width: 134px;
+}
+#restricted_users_table td:nth-of-type(5) {
+  max-width: 600px;
+}
+
+#away_users_table td:nth-of-type(1) {
+  width: 134px;
+}
+#away_users_table td:nth-of-type(6) {
+  max-width: 600px;
+}
+
+.event_table_wrapper table td:nth-of-type(1) {
+  width: 104px;
+}
+.event_table_wrapper table td:nth-of-type(4) {
+  max-width: 600px;
+}
+
 
 @media screen and (max-width: 1400px), (max-height: 800px) {
   #main_header {
