Optimised the staff login to use Ajax and cookies
Main changes include:
-> Added css and html to support a 'change password' popup menu for staff users, now all it needs is some functional back-end code
-> Removed all PHP used for the staff login from home_page.php. This is now done using the file 'staff_login.php' which is more optimised and secure
-> Changed the way staff users login,
    -> Before, a form was submitted an the page was refreshed, PHP in the page was used to sign the staff user in
    -> Now, Ajax is used on the staff login form and submits a POST XML request to the server using 'staff_login.php' the form data
-> Unimportant staff data such as their username or ID is stored in a cookie instead

--- a/css/home_page.css
+++ b/css/home_page.css
@@ -185,6 +185,14 @@ body {
   font:small-caption;font-size:32px
 }
 
+#staff_login_form input[type='text'], input[type='password'] {
+  text-transform: none;
+}
+#staff_login_form input[type='password'] {
+  font: small-caption;
+  font-size: 24px;
+}
+
 #user_selection_grid {
   display: flex;
   height: 100%;
