--- a/css/home_page.css
+++ b/css/home_page.css
@@ -117,27 +117,41 @@ body {
 .login_preset form {
   height: 100%;
   width: 100%;
-  display: grid;
-  grid-template-columns: 30% 60% 10%;
-  grid-template-rows: 100px auto 1fr;
-  grid-row-gap: 30px;
-  grid-auto-flow: row;
   background: var(--white);
   border-radius: 0px 0px 60px 60px;
+
+  display: flex;
+  flex-direction: column;
 }
-.login_preset divider {
-  width: 100%;
-  height: 100%;
-  display: block;
+.login_preset form container {
+  display: grid;
+  grid-template-columns: 160px 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-flow: column;
+  margin: 20px 7%;
+  width: 86%;
+  min-height: none;
+  height: auto;
 }
-.login_preset label {
+.login_preset form container:first-of-type {
+  margin-top: 40px;
+}
+.login_preset form label {
   width: auto;
   height: 50px;
-  margin: auto auto 0px 60px;
+  margin: 0px auto 0px 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
+}
+.login_preset form a {
+  text-align: center;
+  margin: auto auto 20px auto;
+  cursor: pointer;
+}
+.login_preset form a:hover {
+  color: var(--blue);
 }
 .login_preset input, select {
   height: 50px;
@@ -272,6 +286,22 @@ body {
   display: inline-block;
   margin: auto 0px auto 8px;
   padding: 0px;
+}
+
+.staff_note {
+  margin: auto;
+  grid-column: 2;
+  width: 100%;
+  background: none;
+  cursor: pointer;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  position: relative;
+  margin: 0;
+  text-align: center;
 }
 
 #notification_wrapper {
